# space-hog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEX-FIX-SPEC-2.md  CODEX-FIX-SPEC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  TODO.md  pyproject.toml  space_hog.py
.claude/skills/: space-hog.md
.github/workflows/: ci.yml  publish.yml
.ike/: ike.json
.ike/completed/: TASK-0001 - spotlight-based-unused-gui-app-detection.md  TASK-0002 - shell-history-cli-tool-frequency-analysis.md  TASK-0003 - homebrew-orphan-detection-via-brew-autoremove.md  TASK-0005 - confidence-scoring-engine-for-unused-software.md
.ike/milestones/: MS-0001 - v0-6-unused-software-detection.md  MS-0002 - v0-7-startup-health-audit.md
.ike/tasks/: TASK-0001 - spotlight-based-unused-gui-app-detection.md  TASK-0002 - shell-history-cli-tool-frequency-analysis.md  TASK-0003 - homebrew-orphan-detection-via-brew-autoremove.md  TASK-0004 - python-orphan-package-detection.md  TASK-0005 - confidence-scoring-engine-for-unused-software.md  TASK-0006 - sfltool-dumpbtm-startup-item-inventory-macos-13.md  TASK-0007 - launch-agent-daemon-health-check-with-resource-usa.md  TASK-0008 - login-items-audit-via-osascript-smappservice.md
.research/: research.json
demo/: demo-script.sh  demo.cast  demo.tape
findings/: 0001-5-macos-signals-for-detecting-unused-software-layered-confidence-model.md  0002-brew-autoremove-is-zero-risk-low-hanging-fruit-for-homebrew-cleanup.md  0003-4-layers-of-macos-startup-items-diagnosis-approach.md  0004-sfltool-dumpbtm-is-the-single-best-source-for-startup-items-on-macos-13.md
space_hog/: __init__.py  __main__.py  advisor.py  applications.py  caches.py  cli.py  constants.py  docker.py  memory.py  preferences.py  profile.py  runner.py  safe_delete.py  scanners.py  smart.py  stats.py  unused.py  utils.py
tests/: __init__.py  test_docker.py  test_memory.py  test_safe_delete.py  test_scanners.py  test_stats.py  test_utils.py
