[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "space-hog"
version = "0.5.0"
description = "Find and reclaim wasted disk space on macOS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "dshanklin-bv"}
]
keywords = ["disk", "space", "cleanup", "macos", "cli"]
dependencies = [
    "send2trash>=1.8.0",
    "psutil>=5.9.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[project.scripts]
space-hog = "space_hog:main"

[project.urls]
Homepage = "https://github.com/rhea-impact/space-hog"
Repository = "https://github.com/rhea-impact/space-hog"

[project.optional-dependencies]
test = [
    "pytest",
]
