[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "space-hog"
version = "0.5.0"
description = "Agent-native disk space reclamation for macOS. Zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Eidos AGI", email = "daniel@eidosagi.com" },
]
keywords = ["disk", "space", "cleanup", "macos", "cli", "agent-native"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
space-hog = "space_hog:main"

[project.urls]
Homepage = "https://github.com/eidos-agi/space-hog"
Repository = "https://github.com/eidos-agi/space-hog"
Issues = "https://github.com/eidos-agi/space-hog/issues"

[tool.ruff]
target-version = "py310"
line-length = 100
